CB-28848 refactored SdxService. Fixed InterruptedException handling in Sdx.  sdxService.rotateSaltPassword removed 3rd non used parameter